--- a/src/frontend/utils/common.scss
+++ b/src/frontend/utils/common.scss
@@ -17,6 +17,7 @@ button:not(:disabled) {
 }
 
 $z-index-tab: 10;
+$z-index-layouts: 4;
 $z-index-modal: 5;
 $z-index-progress-bar: 30;
 
